--- a/mlruns/354600503478473566/6474529dec3f4f928772081d036535d1/meta.yaml
+++ b/mlruns/354600503478473566/6474529dec3f4f928772081d036535d1/meta.yaml
@@ -1,5 +1,5 @@
 artifact_uri: mlflow-artifacts:/354600503478473566/6474529dec3f4f928772081d036535d1/artifacts
-end_time: null
+end_time: 1747045294719
 entry_point_name: ''
 experiment_id: '354600503478473566'
 lifecycle_stage: active
@@ -10,6 +10,6 @@ source_name: ''
 source_type: 4
 source_version: ''
 start_time: 1747045236293
-status: 1
+status: 3
 tags: []
 user_id: root
