--- a/src/inference/requirements.txt
+++ b/src/inference/requirements.txt
@@ -5,9 +5,9 @@ numpy
 pandas
 pydantic==2.11.5
 python-dotenv==1.1.0
-python_box==7.3.2
+python_box
 PyYAML==6.0.2
 starlette
 uvicorn==0.34.3
 xgboost
-python-box<5
+python-box
