--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.9"
 
 services:
   ingestion:
@@ -68,33 +67,20 @@ services:
       - ./data/processed:/app/data/processed
     networks:
       - mlops_net
-
-  frontend:
-    image: samdataiken/frontend-service:dev
+ 
+  gateway:
     build:
       context: .
-      dockerfile: src/frontend/Dockerfile
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./config:/app/config
-      - ./src/frontend/static:/app/static
-      - ./src/frontend/templates:/app/templates
-    networks:
-      - mlops_net
-
-  security_api:
-    build:
-      context: ./src/security
-      dockerfile: Dockerfile
-    ports:
-      - "8001:8000"
+      dockerfile: src/gateway/Dockerfile
     env_file:
       - .env
-    volumes:
-      - ./src/security:/app
+    ports:
+      - "8002:8002"
     networks:
       - mlops_net
+    depends_on:
+      - inference
+
 
   postgres:
     image: postgres:13
