--- a/src/evaluation/requirements.txt
+++ b/src/evaluation/requirements.txt
@@ -3,8 +3,8 @@ mlflow==2.22.1
 mlflow_skinny==2.22.1
 pandas
 python-dotenv==1.1.0
-python_box==7.3.2
+python_box
 PyYAML==6.0.2
 scikit_learn==1.7.0
 xgboost==3.0.2
-python-box<5
+python-box
