--- a/src/training/requirements.txt
+++ b/src/training/requirements.txt
@@ -1,10 +1,10 @@
 joblib==1.4.2
 mlflow>=2.17,<2.18
 mlflow_skinny==2.17.2
-pandas==2.0.3
+pandas
 python-dotenv==1.0.1
 PyYAML==6.0.2
-scikit-learn==1.3.2
-scipy==1.10.1
-xgboost==2.0.3
-python-box<5
+scikit-learn>=1.5.0
+scipy
+xgboost
+python-box
